# 808X_FinalProject

./: .travis.yml  CMakeLists.txt  README.md  finalproject.conf  my_proj.conf  package.xml
UML/: UMLLink.txt
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/: Navigation.h
include/finalproject/: Frontier.h  Navigation.h
launch/: demo.launch  nav_stack.launch  turtlebot_corridor.launch  turtlebot_world.launch
results/: cppcheck_result.txt  cpplint_result
src/: frontier.cpp  navigation.cpp
test/: frontier_test.cpp  frontier_test.launch  navigation_test.cpp  navigation_test.launch
