<?xml version="1.0"?>
<package format="2">
  <name>finalproject</name>
  <version>0.0.0</version>
  <description>The finalproject package</description>

  <maintainer email="jge0@umd.edu">Jiawei Ge</maintainer>

  <license>GNU General Public License v3.0</license>
  <license>BSD</license>

  <url type="website">https://github.com/SonamYeshe/walker.git</url>

  <author email="jge0@umd.edu">Jiawei Ge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>turtlebot_gazebo</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>turtlebot_gazebo</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>rostest</exec_depend>
  <test_depend>gtest</test_depend>


  <export>

  </export>
</package>
